--- a/client/src/Styles/index.css
+++ b/client/src/Styles/index.css
@@ -1,3 +1,4 @@
+@import url("../Assets/fonts/Montserrat/static/stylesheet.css");
 @import url(./variables.css);
 * {
      margin: 0;
@@ -11,7 +12,8 @@
 
      font-family: var(--app-font-family);
      font-size: var(--app-font-size);
-     color: var(--app-dark-font-color);
+     color: var(--app-default-font-color);
+     text-decoration: none;
 
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
