--- a/client/src/Pages/MainPage/Sections/Header/Header.module.css
+++ b/client/src/Pages/MainPage/Sections/Header/Header.module.css
@@ -1,11 +1,26 @@
 .Header {
-     width: 100%;
-     height: 100vh;
-
      border-radius: 0 0 40px 40px;
+
+     padding-top: 140px;
+
+     width: 100%;
+     height: var(--max-screen-height);
 
      background-image: url("../../Assets/Images/headerBackground.jpg");
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
+}
+
+.container {
+     margin: 0 auto;
+
+     border-radius: 40px;
+
+     max-width: var(--max-container-width);
+     width: 100%;
+     max-height: 900px;
+     height: 100%;
+
+     background-image: url("../../Assets/Images/fon.svg");
 }
