--- a/client/src/Styles/variables.css
+++ b/client/src/Styles/variables.css
@@ -7,6 +7,8 @@
      --breakpoint-pc: 1440px;
      --breakpoint-full-hd: 1920px;
      --breakpoint-4k: 2560px;
+     --max-container-width: 1280px;
+     --max-screen-height: 1080px;
 
      --white-color: white;
      --dark-black-color: black;
