--- a/client/src/Pages/MainPage/Sections/Header/Header.module.css
+++ b/client/src/Pages/MainPage/Sections/Header/Header.module.css
@@ -24,4 +24,70 @@
 
      background-image: url("../../Assets/Images/headerContainer.png");
      backdrop-filter: blur(15px);
+     background-color: rgb(0 0 0 / 23%);
+
+     display: flex;
+     justify-content: flex-end;
+}
+
+.logoImage {
+     position: absolute;
+     top: 2px;
+     left: -145px;
+}
+
+.content {
+     padding: 50px 40px 20px;
+
+     max-width: 600px;
+     width: 100%;
+
+     display: flex;
+     justify-content: flex-start;
+     flex-direction: column;
+     align-items: flex-end;
+
+     text-align: end;
+}
+
+.accientText {
+     margin-bottom: 35px;
+
+     font-weight: 600;
+     font-size: 2.25rem;
+}
+.firstSubText {
+     margin-bottom: 22px;
+
+     font-weight: 500;
+     font-size: 2.25rem;
+}
+.heroText {
+     margin-bottom: 22px;
+
+     font-weight: 800;
+     font-size: 4rem;
+}
+.secondSubText {
+     margin-bottom: 78px;
+
+     font-weight: 500;
+     font-size: 2.25rem;
+}
+.button {
+     margin-bottom: 28px;
+
+     border-radius: 60px;
+
+     padding: 30px 0;
+
+     width: 100%;
+
+     background: var(--header-button-background);
+
+     font-size: 1.75rem;
+     font-weight: 600;
+}
+.buttonSubText {
+     text-align: center;
 }
