--- a/client/src/Components/Common/Navigation/Navigation.module.css
+++ b/client/src/Components/Common/Navigation/Navigation.module.css
@@ -60,7 +60,7 @@
      .container_open {
           padding: 15px;
           width: 100vw;
-          height: 250px;
+          height: 300px;
      }
 }
 
@@ -75,16 +75,22 @@
 }
 .link {
      font-weight: 600;
-     font-size: 1.25rem;
+     font-size: 1.15rem;
 }
 @media screen and (max-width: 1280px) {
      .link {
-          font-size: 1rem;
+          font-size: 0.85rem;
      }
 }
 @media screen and (max-width: 1080px) {
      .link {
-          font-size: 0.8rem;
+          font-size: 0.65rem;
+     }
+}
+
+@media screen and (max-width: 768px) {
+     .link {
+          font-size: 1.25rem;
      }
 }
 
@@ -116,6 +122,11 @@
 @media screen and (max-width: 1080px) {
      .vkText {
           font-size: 0.8rem;
+     }
+}
+@media screen and (max-width: 768px) {
+     .vkText {
+          font-size: 1.25rem;
      }
 }
 .button {
