--- a/client/src/Pages/MainPage/Sections/WhatIsComboSection/WhatIsComboSection.module.css
+++ b/client/src/Pages/MainPage/Sections/WhatIsComboSection/WhatIsComboSection.module.css
@@ -7,7 +7,7 @@
      padding-top: 78px;
      padding-bottom: 70px;
 
-     background: var(--more-about-background);
+     background: var(--history-combo-background);
 }
 
 .container {
@@ -27,13 +27,11 @@
 
 .heading {
      margin-bottom: 55px;
-
-     line-height: 100px;
 }
 
 .text {
      max-width: 1180px;
 
      font-weight: 500;
-     font-size: 2.25rem;
+     font-size: 2rem;
 }
