--- a/client/src/Components/Common/Navigation/Navigation.module.css
+++ b/client/src/Components/Common/Navigation/Navigation.module.css
@@ -5,7 +5,7 @@
      top: 20px;
      left: 20px;
 
-     padding: 32px 110px;
+     padding: 32px;
 
      border-radius: 28px;
 
@@ -19,11 +19,10 @@
 }
 @media screen and (max-width: 1080px) {
      .Navigation {
-          padding: 32px;
           justify-content: center;
      }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
      .Navigation {
           left: unset;
           right: 20px;
@@ -47,7 +46,7 @@
      align-items: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
      .container {
           width: 0;
           height: 0;
@@ -56,7 +55,7 @@
           align-items: flex-start;
      }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
      .container_open {
           padding: 15px;
           width: 100vw;
@@ -67,7 +66,12 @@
 .item {
      margin-right: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1280px) {
+     .item {
+          margin-right: 10px;
+     }
+}
+@media screen and (max-width: 1080px) {
      .item {
           margin-right: 0;
           margin-bottom: 20px;
@@ -75,7 +79,7 @@
 }
 .link {
      font-weight: 600;
-     font-size: 1.15rem;
+     font-size: 1rem;
 }
 @media screen and (max-width: 1280px) {
      .link {
@@ -84,13 +88,7 @@
 }
 @media screen and (max-width: 1080px) {
      .link {
-          font-size: 0.65rem;
-     }
-}
-
-@media screen and (max-width: 768px) {
-     .link {
-          font-size: 1.25rem;
+          font-size: 1rem;
      }
 }
 
@@ -119,12 +117,8 @@
           font-size: 1rem;
      }
 }
+
 @media screen and (max-width: 1080px) {
-     .vkText {
-          font-size: 0.8rem;
-     }
-}
-@media screen and (max-width: 768px) {
      .vkText {
           font-size: 1.25rem;
      }
@@ -137,7 +131,7 @@
      align-self: flex-start;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
      .button {
           display: flex;
      }
