--- a/client/src/Pages/MainPage/Sections/PromenadeHistorySection/PromenadeHistorySection.module.css
+++ b/client/src/Pages/MainPage/Sections/PromenadeHistorySection/PromenadeHistorySection.module.css
@@ -38,7 +38,11 @@
      font-size: 2.25rem;
      font-weight: 500;
 }
-
+@media screen and (max-width: 545px) {
+     .text {
+          font-size: 1.75rem;
+     }
+}
 .image {
      border-radius: 40px;
 
