--- a/client/src/Pages/MainPage/Sections/WhatIsComboSection/WhatIsComboSection.module.css
+++ b/client/src/Pages/MainPage/Sections/WhatIsComboSection/WhatIsComboSection.module.css
@@ -35,3 +35,9 @@
      font-weight: 500;
      font-size: 2rem;
 }
+
+@media screen and (max-width: 545px) {
+     .text {
+          font-size: 1rem;
+     }
+}
