--- a/client/src/Pages/MainPage/Sections/PushkinCardSection/PushkinCardSection.module.css
+++ b/client/src/Pages/MainPage/Sections/PushkinCardSection/PushkinCardSection.module.css
@@ -47,6 +47,7 @@
 @media screen and (max-width: 545px) {
      .subHeading {
           font-size: 1.5rem;
+          margin-bottom: 60px;
      }
 }
 .sectionImage {
@@ -57,7 +58,11 @@
      width: 100%;
      height: 100%;
 }
-
+@media screen and (max-width: 545px) {
+     .sectionImage {
+          margin-bottom: 60px;
+     }
+}
 .steps {
      max-width: 1126px;
      width: 100%;
