--- a/client/src/Styles/variables.css
+++ b/client/src/Styles/variables.css
@@ -10,6 +10,7 @@
      --max-container-width: 1268px;
      --max-screen-height: 1080px;
 
+     --white-70: #e5e5e5;
      --white-90: white;
      --black-00: black;
      --black-transparent-00: rgba(0, 0, 0, 0.507);
