--- a/client/src/Components/Modals/QTicketsModal/QTicketsModal.module.css
+++ b/client/src/Components/Modals/QTicketsModal/QTicketsModal.module.css
@@ -14,6 +14,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     flex-direction: column;
 }
 
 .iframe {
@@ -21,4 +22,20 @@
      max-height: 500px;
      width: 100%;
      height: 100%;
+}
+.border {
+     border-bottom: 1px solid var(--white-70);
+
+     padding: 5px;
+
+     max-width: 500px;
+     width: 100%;
+
+     background-color: var(--white-90);
+
+     display: flex;
+     justify-content: flex-end;
+}
+.closeImage {
+     max-width: 24px;
 }
