--- a/client/src/Pages/ProfilePage/ProfilePage.module.css
+++ b/client/src/Pages/ProfilePage/ProfilePage.module.css
@@ -7,12 +7,30 @@
 .container {
      margin: 0 auto;
 
+     padding: 30px;
      padding-top: 200px;
 
      max-width: 1020px;
      width: 100%;
 }
 
+@media screen and (max-width: 1080px) {
+     .container {
+          padding-top: 130px;
+     }
+}
+
+.loading_error {
+     font-size: 2rem;
+     font-weight: 700;
+     line-height: 1.5;
+}
+
+@media screen and (max-width: 550px) {
+     .loading_error {
+          font-size: 1.5rem;
+     }
+}
 .heading {
      margin-bottom: 100px;
 
@@ -20,14 +38,36 @@
      font-weight: 700;
      text-align: center;
 }
+@media screen and (max-width: 550px) {
+     .heading {
+          margin-bottom: 50px;
 
+          font-size: 3rem;
+     }
+}
 .welcome {
+     margin-bottom: 30px;
+
      display: flex;
      align-items: flex-start;
 }
+
+@media screen and (max-width: 550px) {
+     .welcome {
+          flex-direction: column;
+          align-items: center;
+     }
+}
+
 .userImage {
      margin-right: 30px;
      border-radius: 100%;
+}
+@media screen and (max-width: 550px) {
+     .userImage {
+          margin-right: 0;
+          margin-bottom: 30px;
+     }
 }
 .welcomeHeading {
      margin-bottom: 20px;
@@ -35,12 +75,25 @@
      font-weight: 500;
      font-size: 2rem;
 }
+@media screen and (max-width: 550px) {
+     .welcomeHeading {
+          margin-bottom: 15px;
 
+          font-size: 1.5rem;
+     }
+}
 .userName {
      margin-bottom: 25px;
 
      font-weight: 700;
      font-size: 3rem;
+}
+@media screen and (max-width: 550px) {
+     .userName {
+          margin-bottom: 15px;
+
+          font-size: 2.5rem;
+     }
 }
 .logout {
      border-radius: 40px;
@@ -48,4 +101,26 @@
      padding: 15px 30px;
 
      background-color: var(--crimson-90);
+}
+
+.emailBlock {
+     display: flex;
+     flex-direction: column;
+}
+.emailHeader,
+.email {
+     margin-bottom: 15px;
+
+     font-size: 2rem;
+}
+@media screen and (max-width: 550px) {
+     .email {
+          font-size: 1.5rem;
+     }
+}
+.emailChange {
+     padding: 5px 30px;
+
+     border-radius: 40px;
+     background-color: var(--purpule-50);
 }
