--- a/client/src/Pages/MainPage/Sections/PromenadeHistorySection/PromenadeHistorySection.module.css
+++ b/client/src/Pages/MainPage/Sections/PromenadeHistorySection/PromenadeHistorySection.module.css
@@ -4,6 +4,7 @@
      border-radius: var(--section-boder-radius);
 
      padding: var(--section-padding);
+     padding-bottom: 30px;
      padding-top: var(--section-padding-top);
 
      background: var(--what-is-background);
