--- a/client/src/Pages/MainPage/Sections/StartPointSection/StartPointSection.module.css
+++ b/client/src/Pages/MainPage/Sections/StartPointSection/StartPointSection.module.css
@@ -61,6 +61,8 @@
 .locationImage {
      margin-right: 10px;
 
+     border-radius: 40px;
+
      max-width: 718px;
      max-height: 460px;
      width: 100%;
