--- a/client/src/Components/Modals/TicketsModal/TicketsModal.module.css
+++ b/client/src/Components/Modals/TicketsModal/TicketsModal.module.css
@@ -1,4 +1,4 @@
-.QTicketsModal {
+.TicketsModal {
      z-index: 2;
      position: fixed;
      top: 0;
@@ -18,18 +18,17 @@
 }
 
 .iframe {
-     max-width: 500px;
-     max-height: 500px;
-     width: 100%;
      height: 100%;
+     width: 100%;
+     max-width: 1280px;
 }
 .border {
      border-bottom: 1px solid var(--white-70);
 
      padding: 5px;
 
-     max-width: 500px;
      width: 100%;
+     max-width: 1280px;
 
      background-color: var(--white-90);
 
